# src/main/java/com/paucar/customer_ms/model/Cliente.java
@@ -1,0 +1,38 @@
+package com.paucar.customer_ms.model;
+
+import jakarta.persistence.*;
+import jakarta.validation.constraints.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@Data
+@Entity
+@Table(name = "cliente")
+public class Cliente {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @NotBlank(message = "El nombre es obligatorio")
+    @Size(min = 2, max = 50, message = "El nombre debe tener entre 2 y 50 caracteres")
+    private String nombre;
+
+    @NotBlank(message = "El apellido es obligatorio")
+    @Size(min = 2, max = 50, message = "El apellido debe tener entre 2 y 50 caracteres")
+    private String apellido;
+
+    @NotNull(message = "El DNI no puede ser nulo")
+    @Size(min = 8, max = 8, message = "El DNI debe tener exactamente 8 caracteres")
+    @Digits(integer = 8, fraction = 0, message = "El DNI debe contener solo números")
+    private String dni;
+
+    @NotBlank(message = "El correo electrónico es obligatorio")
+    @Email(message = "El formato del correo electrónico no es válido")
+    private String email;
+}
