# src/main/java/com/paucar/customer_ms/model/Customer.java
@@ -1,43 +1,0 @@
-package com.paucar.customer_ms.model;
-
-import jakarta.persistence.*;
-import jakarta.validation.constraints.Email;
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Pattern;
-import jakarta.validation.constraints.Size;
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@AllArgsConstructor
-@NoArgsConstructor
-@Data
-@Entity
-@Table(name = "customer")
-public class Customer {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private long id;
-
-    @NotBlank(message = "El nombre es obligatorio")
-    @Size(min = 2, max = 50, message = "El nombre debe tener entre 2 y 50 caracteres")
-    @Pattern(regexp = "^[A-Za-zÀ-ÿ' ]+$", message = "El nombre solo debe contener letras, espacios y apóstrofes")
-    private String name;
-
-    @NotBlank(message = "El apellido es obligatorio")
-    @Size(min = 2, max = 50, message = "El apellido debe tener entre 2 y 50 caracteres")
-    @Pattern(regexp = "^[A-Za-zÀ-ÿ' ]+$", message = "El apellido solo debe contener letras, espacios y apóstrofes")
-    private String lastname;
-
-    @NotNull(message = "El DNI no puede ser nulo")
-    @Size(min = 8, max = 8, message = "El DNI debe tener exactamente 8 dígitos")
-    @Pattern(regexp = "^[0-9]*$", message = "El DNI solo debe contener números")
-    private String dni;
-
-    @NotBlank(message = "El correo electrónico es obligatorio")
-    @Email(message = "El formato del correo electrónico no es válido")
-    @Size(max = 100, message = "El correo electrónico no debe exceder los 100 caracteres")
-    private String email;
-}
